Enhanced expandable cell behavior near screen screen bottom margin, centralized related functions in abstract class ExpandableCellTableViewController

--- a/RayTracer/Views/SegmentedControlTableViewCell.xib
+++ b/RayTracer/Views/SegmentedControlTableViewCell.xib
@@ -16,13 +16,13 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dn5-4r-8M9">
                         <rect key="frame" x="16" y="-0.5" width="42" height="44"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="44" id="CcU-EF-gFA"/>
+                            <constraint firstAttribute="height" priority="750" constant="44" id="CcU-EF-gFA"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
