--- a/RayTracer/Views/PointTableViewCell.xib
+++ b/RayTracer/Views/PointTableViewCell.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="165"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="165"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="164.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7aZ-fL-jgU">
@@ -148,8 +148,11 @@
                 <outlet property="slidersWrapperView" destination="02h-Tf-Egl" id="EoX-ci-EYP"/>
                 <outlet property="slidersWrapperViewHeightConstraint" destination="Od2-1q-5A5" id="wTK-pl-cwv"/>
                 <outlet property="titleLabel" destination="hLI-8f-OW6" id="OcX-JT-qNF"/>
+                <outlet property="xLabel" destination="ENq-6w-hAL" id="FFT-5C-Ki2"/>
                 <outlet property="xSlider" destination="ZCI-eh-FLa" id="rcB-b9-bzI"/>
+                <outlet property="yLabel" destination="aui-i0-3Eq" id="6jB-TW-4FE"/>
                 <outlet property="ySlider" destination="CNr-YF-HVP" id="Z0j-VT-HI5"/>
+                <outlet property="zLabel" destination="6Zq-ag-Wcr" id="zUv-7W-iZ3"/>
                 <outlet property="zSlider" destination="DhY-Dj-6Ss" id="g7q-Nf-VTr"/>
             </connections>
             <point key="canvasLocation" x="-145" y="56.5"/>
