--- a/RayTracer/Views/FrameSizeTableViewCell.xib
+++ b/RayTracer/Views/FrameSizeTableViewCell.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="123"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="123"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="122.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tcg-m1-zb2">
@@ -130,11 +130,13 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="heightLabel" destination="qwy-Vu-loz" id="GJT-hk-I7E"/>
                 <outlet property="heightSlider" destination="akl-Uj-XQQ" id="zbd-Bq-0eZ"/>
                 <outlet property="sizeLabel" destination="oBl-VQ-v6l" id="G3B-FY-i3P"/>
                 <outlet property="slidersWrapperView" destination="q9n-n5-5qK" id="N7b-4Y-36z"/>
                 <outlet property="slidersWrapperViewHeightConstraint" destination="4fk-lq-Eao" id="dOd-mg-f1A"/>
                 <outlet property="titleLabel" destination="wWq-fC-a6k" id="h03-OE-Vfc"/>
+                <outlet property="widthLabel" destination="9aT-o5-TSC" id="lX2-zv-kJe"/>
                 <outlet property="widthSlider" destination="VFb-aq-c8U" id="Z8X-rG-ghs"/>
             </connections>
             <point key="canvasLocation" x="34" y="93.5"/>
